# zapbench

./: pyproject.toml
colabs/: datasets.py  metrics.py  train_and_evaluate.py  ts_forecasting_interactive.py
processing/: ffn_inference.py  stimuli.py
zapbench/: constants.py
